server/assets/app/css/pages/module_cache.css
#module-cache {
  display: flex;
  flex-direction: column;
  gap: var(--noora-spacing-6);
  padding: var(--noora-spacing-7) var(--noora-spacing-5);

  & > [data-part="filters"] {
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-end;
    align-items: center;
    gap: var(--noora-spacing-4);
  }

  & > [data-part="analytics-card"] {
    display: flex;
    flex-direction: column;
    gap: var(--noora-spacing-4);

    & > [data-part="widgets"] {
      display: flex;
      flex-direction: row;
      gap: var(--noora-spacing-4);
      & > * {
        flex: 1;
      }

      @media (max-width: 768px) {
        & {
          flex-direction: column;
        }
      }
    }
    & .noora-chart {
      padding: var(--noora-spacing-3);
      height: 200px;
    }
    & .noora-dropdown-item:not([data-selected]) svg {
      visibility: hidden;
    }
  }

  & > [data-part="recent-runs"] {
    & > [data-part="recent-runs-section"] {
      gap: var(--noora-spacing-8);
      padding: var(--noora-spacing-9);

      & > [data-part="runs-section"] {
        display: flex;
        flex-direction: column;
        gap: var(--noora-spacing-8);

        & > [data-part="runs-chart"] {
          display: flex;
          flex-direction: column;
          gap: var(--noora-spacing-2);
          & .noora-chart {
            height: 148px;
          }
        }
      }
    }
    & > [data-part="empty-runs"] {
      padding: var(--noora-spacing-4) 0;
      & > [data-part="empty-runs-table-card-section"] > [data-part="title"] {
        padding-top: var(--noora-spacing-9);
      }
    }
  }

  & > [data-part="module-invalidation"] {
    & > [data-part="widgets"] {
      display: flex;
      flex-direction: row;
      gap: var(--noora-spacing-4);

      & > * {
        flex: 1;
      }

      @media (max-width: 768px) {
        & {
          flex-direction: column;
        }
      }
    }

  }
}

#module-invalidations {
  display: flex;
  flex-direction: column;
  gap: var(--noora-spacing-6);
  padding: var(--noora-spacing-7) var(--noora-spacing-5);

  & > [data-part="filters"] {
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-end;
    align-items: center;
    gap: var(--noora-spacing-4);
  }
}

#module-cache-module {
  display: flex;
  flex-direction: column;
  gap: var(--noora-spacing-6);
  padding: var(--noora-spacing-7) var(--noora-spacing-5);

  & > [data-part="header"] {
    display: flex;
    flex-direction: column;
    gap: var(--noora-spacing-3);

    & > [data-part="title"] {
      display: flex;
      flex-direction: row;
      align-items: center;
      gap: var(--noora-spacing-4);

      & > [data-part="name"] {
        color: var(--noora-surface-label-primary);
        font: var(--noora-font-weight-semibold) var(--noora-font-title-medium);
      }
    }
  }

  & > [data-part="filters"] {
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-end;
    align-items: center;
    gap: var(--noora-spacing-4);
  }

  & [data-part="widgets"] {
    display: flex;
    flex-direction: row;
    gap: var(--noora-spacing-4);

    & > * {
      flex: 1;
    }

    @media (max-width: 768px) {
      & {
        flex-direction: column;
      }
    }
  }

  & .noora-chart {
    padding: var(--noora-spacing-3);
    height: 220px;
  }

  & [data-part="reasons-grid"] {
    display: flex;
    flex-direction: row;
    gap: var(--noora-spacing-4);

    @media (max-width: 768px) {
      & {
        flex-direction: column;
      }
    }

    & > * {
      flex: 1;
    }
  }
}

